# BI-Toolbox

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  CredManager.py  Makefile  README.md  pyproject.toml  report_processor.py  setup.cfg
ReportingTools/: GenericReportProcessor.py
cookbook/basic_usage/: basic_report.ipynb
docs/: Makefile  conf.py  create_rst.py  requirements.txt
docs/_templates/: class.rst  pydantic.rst  typeddict.rst
docs/scripts/: custom_formatter.py
src/CredManager/: CredManager.py
src/ReportingTools/: GenericReportProcessor.py
src/bi_toolbox/: __init__.py
src/bi_toolbox/CredManager/: CredManager.py
src/bi_toolbox/ReportingTools/: GenericReportProcessor.py
