[tool.poetry]
name = "bi_tools"
version = "0.1.0"
description = "BI tools package for report processing, including S3, Slack, Google Sheets, and database integrations."
authors = ["Amr Sherif <amr.achraff@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
boto3 = "^1.17.0"
slack-sdk = "^3.9.0"
gspread = "^5.0.0"
pydrive = "^1.3.1"
SQLAlchemy = "^1.4.0"
pydantic = "^1.8.2"
google-auth = "^1.30.0"
google-auth-oauthlib = "^0.4.4"
dask = "^2021.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"