[metadata]
name = bi_tools
version = 0.1.0
description = BI tools package for processing reports, with S3, Slack, and Google Sheets integration.
long_description = file: README.md
long_description_content_type = text/markdown
author = Amr Sherif
author_email = amr.achraff@gmail.com
url = https://github.com/amr-sheriff/bi_tools
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas >= 1.3.0
    boto3 >= 1.17.0
    slack-sdk >= 3.9.0
    gspread >= 5.0.0
    pydrive >= 1.3.1
    SQLAlchemy >= 1.4.0
    pydantic >= 1.8.2
    google-auth >= 1.30.0
    google-auth-oauthlib >= 0.4.4
    dask >= 2021.6.2

[options.packages.find]
where = bi_tools
