[metadata]
name = bi_toolbox
version = 0.1.0a1
description = A comprehensive BI tools package for automated report processing and data integration, supporting S3, Slack, Email, Google Sheets, Tableau, and various database connections.
long_description = file: README.md
long_description_content_type = text/markdown
author = Amr Sherif
author_email = amr.achraff@gmail.com
url = https://github.com/amr-sheriff/BI-Toolbox/tree/main
license = Apache License 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Data Scientists
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Build Tools
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas >= 2.2.0
    boto3 >= 1.17.0
    slack-sdk >= 3.32.0
    gspread >= 6.1.2
    pydrive >= 1.3.1
    SQLAlchemy >= 2.0.0
    pydantic >= 2.9.0
    google-auth >= 2.34.0
    google-auth-oauthlib >= 1.2.1
    python-dotenv >= 1.0.0
    dask >= 2024.8.0

[options.packages.find]
where = bi_toolbox
